test/functions/iterators/errors/incorrectYieldTypes.good
incorrectYieldTypes.chpl:4: In iterator 'IT':
incorrectYieldTypes.chpl:6: error: cannot initialize yield value of type 'int(64)' from a '[domain(1,int(64),false)] locale'
incorrectYieldTypes.chpl:8: error: cannot initialize yield value of type 'int(64)' from a 'domain(1,int(64),false)'
